Repaired dependency on libpthread for wiringPi Removed flag O_CLOEXEC which is not supported

--- a/wiringbp-pi/Makefile
+++ b/wiringbp-pi/Makefile
@@ -17,7 +17,7 @@ define Package/wiringbp-pi
   CATEGORY:=Utilities
   TITLE:=WiringBP
   MAINTAINER:=Gerhard Bertelsmann
-  DEPENDS:=
+  DEPENDS:= + libpthread.so
 endef
 
 define Package/wiringbp-pi/description
