--- a/wiringbp-pi/Makefile
+++ b/wiringbp-pi/Makefile
@@ -17,7 +17,7 @@ define Package/wiringbp-pi
   CATEGORY:=Utilities
   TITLE:=WiringBP
   MAINTAINER:=Gerhard Bertelsmann
-  DEPENDS:= + libpthread.so
+  DEPENDS:= +libpthread +librt
 endef
 
 define Package/wiringbp-pi/description
@@ -29,33 +29,40 @@ define Build/Prepare
 	$(CP) ./* $(PKG_BUILD_DIR)/
 endef
 
+MOPTS = PREFIX=/usr/
+
 define Build/Compile
 	make -C $(PKG_BUILD_DIR)/wiringPi	\
-		$(TARGET_CONFIGURE_OPTS)	\
+ 		$(TARGET_CONFIGURE_OPTS) $(MOPTS)	\
 		CFLAGS="$(TARGET_CFLAGS) $(TARGET_CPPFLAGS) -I/$(PKG_BUILD_DIR)/wiringPi/ -I/$(PKG_BUILD_DIR)/devLib/"	\
 		LIBS="$(TARGET_LDFLAGS)"
 	ln -sf $(PKG_BUILD_DIR)/wiringPi/libwiringPi.so.2.0 $(PKG_BUILD_DIR)/wiringPi/libwiringPi.so
 	make -C $(PKG_BUILD_DIR)/devLib		\
-		$(TARGET_CONFIGURE_OPTS)	\
+		$(TARGET_CONFIGURE_OPTS) $(MOPTS)	\
 		CFLAGS="$(TARGET_CFLAGS) $(TARGET_CPPFLAGS) -I/$(PKG_BUILD_DIR)/wiringPi/ -I/$(PKG_BUILD_DIR)/devLib/"	\
 		LIBS="$(TARGET_LDFLAGS)"
 	ln -sf $(PKG_BUILD_DIR)/devLib/libwiringPiDev.so.2.0 $(PKG_BUILD_DIR)/devLib/libwiringPiDev.so
 	make -C $(PKG_BUILD_DIR)/gpio		\
-		$(TARGET_CONFIGURE_OPTS)	\
+		$(TARGET_CONFIGURE_OPTS) $(MOPTS)	\
 		CFLAGS="$(TARGET_CFLAGS) $(TARGET_CPPFLAGS) -I/$(PKG_BUILD_DIR)/wiringPi/ -I/$(PKG_BUILD_DIR)/devLib/"	\
 		LIBS="$(TARGET_LDFLAGS) -L$(PKG_BUILD_DIR)/devLib -L$(PKG_BUILD_DIR)/wiringPi -lwiringPi -lwiringPiDev -lpthread -lm"
 	make -C $(PKG_BUILD_DIR)/examples speed	\
-		$(TARGET_CONFIGURE_OPTS)	\
+		$(TARGET_CONFIGURE_OPTS)  $(MOPTS)	\
 		CFLAGS="$(TARGET_CFLAGS) $(TARGET_CPPFLAGS) -I/$(PKG_BUILD_DIR)/wiringPi/ -I/$(PKG_BUILD_DIR)/devLib/"	\
 		LIBS="$(TARGET_LDFLAGS) -L$(PKG_BUILD_DIR)/devLib -L$(PKG_BUILD_DIR)/wiringPi -lwiringPi -lwiringPiDev -lm"
 endef
 
+define Build/InstallDev
+        make -C $(PKG_BUILD_DIR)/wiringPi $(MOPTS) DESTDIR=$(1) \
+        	install-headers install-static
+endef
+        
 define Package/wiringbp-pi/install
-	$(INSTALL_DIR) $(1)/lib
-	$(INSTALL_BIN) $(PKG_BUILD_DIR)/wiringPi/libwiringPi.so.2.0 $(1)/lib
-	ln -sf libwiringPi.so.2.0     $(1)/lib/libwiringPi.so
-	$(INSTALL_BIN) $(PKG_BUILD_DIR)/devLib/libwiringPiDev.so.2.0 $(1)/lib
-	ln -sf libwiringPiDev.so.2.0  $(1)/lib/libwiringPiDev.so
+	$(INSTALL_DIR) $(1)/usr/lib
+	$(INSTALL_BIN) $(PKG_BUILD_DIR)/wiringPi/libwiringPi.so.2.0 $(1)/usr/lib
+	ln -sf libwiringPi.so.2.0     $(1)/usr/lib/libwiringPi.so
+	$(INSTALL_BIN) $(PKG_BUILD_DIR)/devLib/libwiringPiDev.so.2.0 $(1)/usr/lib
+	ln -sf libwiringPiDev.so.2.0  $(1)/usr/lib/libwiringPiDev.so
 	$(INSTALL_DIR) $(1)/usr/bin
 	$(INSTALL_BIN) $(PKG_BUILD_DIR)/gpio/gpio $(1)/usr/bin/gpio
 endef
